...
                    app:autoSizeStepGranularity="2dp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_skill_name"
                app:layout_constraintEnd_toStartOf="@+id/icon_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:textSize="16sp"
                    app:autoSizeTextType="uniform" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_skill_category"
                app:endIconMode="clear_text"
...
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/skill_xp_text"
                app:layout_constraintTop_toTopOf="@+id/skill_xp_text"
                tools:text="1500 XP" />

            <TextView
                android:id="@+id/skill_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/skill_level_text"
...
                app:layout_constraintStart_toEndOf="@+id/skill_level_text"
                app:layout_constraintTop_toTopOf="@+id/skill_level_text"
                app:layout_constraintVertical_bias="0.0"
                tools:text="1" />

            <TextView
                android:id="@+id/skill_done_tasks_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/skill_done_tasks_text"
...
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/skill_hours"
                app:layout_constraintTop_toTopOf="@+id/skill_hours"
                tools:text="100" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skill_open_tasks_text"
                tools:listitem="@layout/item_assigned_task" />

            <Button
                android:id="@+id/delete_skill_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/action_delete"
...
