...
            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/skill_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/skill_icon"
                app:layout_constraintTop_toTopOf="@+id/skill_icon"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/skill_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
...
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    tools:text="Reading" />

                <TextView
                    android:id="@+id/skill_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
...
                    android:singleLine="true"
                    android:textSize="12sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/skill_icon"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                    tools:text="Intellect" />

            </LinearLayout>

            <TextView
                android:id="@+id/skill_level"
                android:layout_width="0dp"
...
