...
    <string name="unit_hour_short">%d h</string>
    <string name="unit_day_short">%d d</string>
    <string name="unit_week_short">%d w</string>
    <string name="unit_year_short">%d y</string>

    <!-- Terms -->
    <string name="term_xp_value">%d XP</string>
    <string name="term_level_value">Level %d</string>
    <string name="term_due_at">Due at %s</string>
    <string name="term_due_today">Due today</string>
    <string name="term_monday_short">MON</string>
    <string name="term_monday">Monday</string>
    <string name="term_tuesday_short">TUE</string>
    <string name="term_wednesday_short">WED</string>
...
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="error_too_short">Must be at least %d characters long</string>
    <string name="error_skill_already_exists">Such skill already exists</string>
    <string name="error_category_already_exists">Such category already exists</string>

    <!-- Event messages -->
    <string name="event_skill_updated">Skill updated</string>
    <string name="event_skill_deleted">Skill deleted</string>
    <string name="event_task_complete">Task completed (+%d XP)</string>
    <string name="event_task_failed">Task failed</string>
    <string name="event_task_updated">Task updated</string>
    <string name="event_category_deleted">Category deleted</string>

...
