...
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="false"
            app:fabAlignmentMode="center" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@android:color/transparent"
            app:elevation="0dp"
            app:labelVisibilityMode="labeled"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_nav_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/content_fab"
            android:focusable="true"
            android:src="@android:drawable/ic_input_add"
...
