package org.vmaier.tidfl

import android.content.pm.ActivityInfo
import android.view.View
import android.view.ViewGroup
import androidx.recyclerview.widget.RecyclerView.ViewHolder
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.doesNotExist
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.platform.app.InstrumentationRegistry
import androidx.test.rule.ActivityTestRule
import androidx.test.uiautomator.UiDevice
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.*
import org.hamcrest.TypeSafeMatcher
import org.hamcrest.core.IsInstanceOf
import org.junit.After
import org.junit.Ignore
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith


@LargeTest
@RunWith(AndroidJUnit4::class)
class SkillsTests {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(MainActivity::class.java)

    @Test
    fun create() {

        // click on skills menu item
        onView(
            allOf(
                withId(R.id.nav_skills),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottom_nav),
                        0
                    ),
                    1
                )
            )
        )
            .perform(click())

        // click on fab buttom
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.skill_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the name field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.name),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Coding"),
                closeSoftKeyboard()
            )

        // type in the category field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.category),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Intellect"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("braces"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(1, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // click on create to create skill
        onView(
            withId(R.id.create_skill_button)
        )
            .perform(click())

        // validate that skill was created and skill item is displayed in the recycler view
        onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.cv),
                        childAtPosition(withId(R.id.rv), 0)
                    ), 0
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate skill name
        onView(
            allOf(
                withId(R.id.skill_name),
                withText("Coding")
            )
        )
            .check(matches(isDisplayed()))

        // validate skill category
        onView(
            allOf(
                withId(
                    R.id.skill_category
                ),
                withText("Intellect")
            )
        )
            .check(matches(isDisplayed()))

        // validate initial skill level
        onView(
            allOf(
                withId(R.id.skill_level),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_level_value, 1)
                )
            )
        )
            .check(matches(isDisplayed()))


        // validate skill icon
        onView(
            allOf(
                withId(R.id.skill_icon),
                // validate icon ID
                withTagValue(`is`(896))
            )
        )
            .check(matches(isDisplayed()))
    }

    @Test
    fun view() {

        // click on skills menu item
        onView(
            allOf(
                withId(R.id.nav_skills),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottom_nav),
                        0
                    ),
                    1
                )
            )
        )
            .perform(click())

        // click on fab buttom
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.skill_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the name field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.name),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Coding"),
                closeSoftKeyboard()
            )

        // type in the category field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.category),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Intellect"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("braces"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(1, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // click on button to create skill
        onView(
            withId(R.id.create_skill_button)
        )
            .perform(click())

        // validate that skill was created and skill item is displayed in the recycler view
        onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.cv),
                        childAtPosition(withId(R.id.rv), 0)
                    ), 0
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on skill item
        onView(
            allOf(
                withId(R.id.rv),
                childAtPosition(withId(R.id.skill_list_layout), 0)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(0, click()))

        // validate skill name
        onView(
            allOf(
                childAtPosition(
                    childAtPosition(
                        withId(R.id.name),
                        0
                    ),
                    0
                ),
                withText("Coding")
            )
        )
            .check(matches(isDisplayed()))

        // validate skill category
        onView(
            allOf(
                childAtPosition(
                    childAtPosition(
                        withId(R.id.category),
                        0
                    ),
                    0
                ),
                withText("Intellect")
            )
        )
            .check(matches(isDisplayed()))

        // validate skill icon
        onView(
            allOf(
                withId(R.id.icon_button),
                // validate icon ID
                withTagValue(`is`(896))
            )
        )
            .check(matches(isDisplayed()))

        // validate initial skill level
        onView(
            allOf(
                withId(R.id.skill_level_value),
                withText("1")
            )
        )
            .check(matches(isDisplayed()))

        // validate initial skill xp value
        onView(
            allOf(
                withId(R.id.skill_xp_value),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 0)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate initial open tasks value
        onView(
            allOf(
                withId(R.id.skill_open_tasks_value),
                withText("0")
            )
        )
            .check(matches(isDisplayed()))

        // validate initial done tasks value
        onView(
            allOf(
                withId(R.id.skill_done_tasks_value),
                withText("0")
            )
        )
            .check(matches(isDisplayed()))
    }

    @Test
    fun edit() {

        // click on skills menu item
        onView(
            allOf(
                withId(R.id.nav_skills),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottom_nav),
                        0
                    ),
                    1
                )
            )
        )
            .perform(click())

        // click on fab buttom
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.skill_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the name field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.name),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Coding"),
                closeSoftKeyboard()
            )

        // type in the category field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.category),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Intellect"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("braces"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(1, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // click on create to create skill
        onView(
            withId(R.id.create_skill_button)
        )
            .perform(click())

        // validate that skill was created and skill item is displayed in the recycler view
        onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.cv),
                        childAtPosition(withId(R.id.rv), 0)
                    ), 0
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on skill item
        onView(
            allOf(
                withId(R.id.rv),
                childAtPosition(withId(R.id.skill_list_layout), 0)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(0, click()))

        // change skill name
        onView(
            allOf(
                childAtPosition(
                    childAtPosition(
                        withId(R.id.name),
                        0
                    ),
                    0
                ),
                withText("Coding")
            )
        )
            .perform(replaceText("Programming"))
        onView(
            allOf(
                childAtPosition(
                    childAtPosition(
                        withId(R.id.name),
                        0
                    ),
                    0
                ),
                withText("Programming")
            )
        )
            .perform(closeSoftKeyboard())

        // change category name
        onView(
            allOf(
                childAtPosition(
                    childAtPosition(
                        withId(R.id.category),
                        0
                    ),
                    0
                ),
                withText("Intellect")
            )
        )
            .perform(replaceText("Computer Science"))
        onView(
            allOf(
                childAtPosition(
                    childAtPosition(
                        withId(R.id.category),
                        0
                    ),
                    0
                ),
                withText("Computer Science")
            )
        )
            .perform(closeSoftKeyboard())

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(scrollTo(), click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("braces"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(2, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // press back
        UiDevice
            .getInstance(InstrumentationRegistry.getInstrumentation())
            .pressBack()

        // validate that skill is still displayed in the recycler view
        onView(
            allOf(
                withId(R.id.cv),
                childAtPosition(
                    allOf(
                        withId(R.id.rv),
                        childAtPosition(
                            withId(R.id.skill_list_layout),
                            0
                        )
                    ),
                    0
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate toast message was shown
        onView(withText(R.string.event_skill_updated))
            .inRoot(withDecorView(not(mActivityTestRule.activity.window.decorView)))
            .check(matches(isDisplayed()))

        // validate skill name
        onView(
            allOf(
                withId(R.id.skill_name),
                withText("Programming")
            )
        )
            .check(matches(isDisplayed()))

        // validate skill category
        onView(
            allOf(
                withId(
                    R.id.skill_category
                ),
                withText("Computer Science")
            )
        )
            .check(matches(isDisplayed()))

        // validate initial skill level
        onView(
            allOf(
                withId(R.id.skill_level),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_level_value, 1)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate skill icon
        onView(
            allOf(
                withId(R.id.skill_icon),
                // validate icon ID
                withTagValue(`is`(897))
            )
        )
            .check(matches(isDisplayed()))
    }

    @Test
    fun delete() {

        // click on skills menu item
        onView(
            allOf(
                withId(R.id.nav_skills),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottom_nav),
                        0
                    ),
                    1
                )
            )
        )
            .perform(click())

        // click on fab buttom
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.skill_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the name field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.name),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Coding"),
                closeSoftKeyboard()
            )

        // type in the category field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.category),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Intellect"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("braces"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(1, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // click on create to create skill
        onView(
            withId(R.id.create_skill_button)
        )
            .perform(click())

        // validate that skill was created and skill item is displayed in the recycler view
        onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.cv),
                        childAtPosition(withId(R.id.rv), 0)
                    ), 0
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on skill item
        onView(
            allOf(
                withId(R.id.rv),
                childAtPosition(withId(R.id.skill_list_layout), 0)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(0, click()))

        // click on button to delete skill
        onView(
            withId(R.id.delete_skill_button)
        )
            .perform(click())

        // validate that skill was deleted and skill item is not displayed in the recycler view
        onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.cv),
                        childAtPosition(withId(R.id.rv), 0)
                    ), 0
                )
            )
        )
            .check(doesNotExist())
    }

    @Test
    fun restore() {

        // click on skills menu item
        onView(
            allOf(
                withId(R.id.nav_skills),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottom_nav),
                        0
                    ),
                    1
                )
            )
        )
            .perform(click())

        // click on fab buttom
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.skill_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the name field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.name),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Coding"),
                closeSoftKeyboard()
            )

        // type in the category field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.category),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Intellect"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("braces"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(1, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // click on create to create skill
        onView(
            withId(R.id.create_skill_button)
        )
            .perform(click())

        // validate that skill was created and skill item is displayed in the recycler view
        onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.cv),
                        childAtPosition(withId(R.id.rv), 0)
                    ), 0
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on skill item
        onView(
            allOf(
                withId(R.id.rv),
